--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="qq_header_pull_over">释放立即刷新</string>
     <string name="qq_header_refreshing">正在刷新...</string>
     <string name="qq_header_completed">刷新成功</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="text_web_ceo">WEB ANALYTICS</string>
+    <string name="text_web_dev">WEB DEVELOPER</string>
+    <string name="text_e_commerce">e-Commerce</string>
 </resources>
